--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                           </P>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" onclick="x.play()" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
@@ -333,6 +333,9 @@
             </div>
         </div>
     </div>
+        <audio id="my_audio" >
+        <source src="https://www.tonesmp3.com/ringtones/ipl-music.mp3"  type="audio/mpeg">
+      </audio>
     <script src="new.js"></script>
 </body>
 
