--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                             </div>
                             <div class="col-3">
                                 <button type="button" class="btn btn-primary" onclick="team2.settimer(60)"
-                                    id="start">START</button>
+                                    id="start1">START</button>
                             </div>
                             <div class="col-6" style="overflow: hidden;color:white">
                                 <h5>
