--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             </div>
         </div>
     </div>
-        <audio id="my_audio" >
+        <audio loop id="my_audio" >
         <source src="https://www.tonesmp3.com/ringtones/ipl-music.mp3"  type="audio/mpeg">
       </audio>
     <script src="new.js"></script>
